java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint4.pass
/*
 * AddCast1.java
 *
 * Created on March 12, 2005, 8:10 PM
 */

package org.netbeans.test.java.hints;

import java.util.List;

/**
 *
 * @author lahvac
 */
public class AddCast4 {
    
    /** Creates a new instance of AddCast1 */
    public AddCast4() {
        List l = null;
        String s;
        
        s = (String) l.get(0);
    }
    
}
